- Added basic background color inheritance support to widgets.
- Rendering of graph widget has been fixed and enhanced with "border.flat" property.
- Replaced text_border property for tk::Group widget with text_padding property.
- Added heading property for tk::Group widget.
- Replaced text_border property for tk::ComboGroup widget with text_padding property.
- Added heading property for tk::ComboGroup widget.
- Fixed missing builtin styles for tk::ComboGroup widget.
- Added spin_spacing property to tk::ComboGroup widget.
- Added 'balance_color', 'balance_color_custom', 'flat' and 'scale_marks' properties to the tk::Knob widget.
- Added font scaling feature to the tk::Font property.
- Added freetype2 library dependencies for UNIX-compatible operating systems.
- Added possibility to specify custom fonts in the stylesheet data.
- Added font loading support by the tk::Schema object.
- Fixed bug in menu item allocation that could yield to ugly-looking menus.
- Implemented proper UI schema loading at the runtime.
- Added tk::Registry class for managing widgets.
- Denied copy constructor usage for all widget classes.
- Added tk::Bevel widget which allows to draw bevels/facets in the UI.
- Added tk::Arrangement property which allows to arrange some element inside of another.
- Indicator now supports modern-style drawing.
- Added tk::MultiLabel widget for drawing vector glyphs.
- Added tk::TextAdjust property and support of this property by several widgets.
- Added support of hovers by the tk::Label widget.
- Fixed bug with UIE_MOUSE_IN and UIE_MOUSE_OUT event delivery when entering/leaving window.
- tk::Button now allows to use different colors for different states.
- Removed obsolete tk::StyleInitializer class.
- Fixed memory corruption in tk::Grid widget related to invalid cell pointers after reallocation of memory chunk.

TODO:
- Add custom mouse pointer for fraction actions.

=== 0.5.0 ===
* Initial release.