@@ -140,6 +140,7 @@ namespace lsp
 
                 prop::WidgetList<Widget>    vWidgets;
                 prop::WidgetPtr<ListBoxItem> sSelected;
+                prop::WidgetPtr<Widget>     sActive;
                 prop::CollectionListener    sIListener;
 
             protected:
@@ -186,6 +187,7 @@ namespace lsp
                 LSP_TK_PROPERTY(SizeConstraints,            constraints,            &sSizeConstraints)
                 LSP_TK_PROPERTY(Alignment,                  heading,                &sHeading)
                 LSP_TK_PROPERTY(WidgetPtr<ListBoxItem>,     selected,               &sSelected)
+                LSP_TK_PROPERTY(WidgetPtr<Widget>,          active,                 &sActive)
 
                 LSP_TK_PROPERTY(Font,                       list_font,              sLBox.font())
                 LSP_TK_PROPERTY(WidgetList<ListBoxItem>,    items,                  sLBox.items())
